allow kryo mapper to write/read multiple objects